[tool.poetry]
name = "termslime"
version = "0.3.2"
description = "Termslime displays images or videos in your terminal with true colors."
license = "MIT"
authors = ["Gary Zhang <garyzhang2002@hotmail.com>", "xsjk <xsjk17@outlook.com>"]
maintainers = ["Gary Zhang <garyzhang2002@hotmail.com>", "xsjk <xsjk17@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/xsjk/termslime"
repository = "https://github.com/xsjk/termslime"
documentation = "https://github.com/xsjk/termslime"
keywords = ["cli", "image", "terminal"]

[tool.poetry.dependencies]
python = "^3.7"
joblib = "^1.1.0"
opencv-python = "^4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tslime = "termslime.__main__:__main"